Add natural-language entry point and CPG demo dataset
Route free-text requests through Gemini function calling so one endpoint
covers both audience-building flows: cold start by industry, and lookalike
expansion from segments the user already picked. Seed ids come from the
caller rather than the model, which has no way to know them.

Also fixes three defects the CPG taxonomy exposed:
- Set.of() on split tokens threw on names like "Urban_Rural_Classification
  > Rural", failing every natural-language request
- merging stderr into stdout put a progress bar ahead of the embedding
  JSON, silently degrading vector retrieval to lexical matching
- the embedding subprocess reloaded the model per request; it is now a
  long-lived worker, cutting that path from ~14s to ~32ms

Gemini defaults to MEDIUM thinking, which dominated request latency for
routing and extraction; pinning it to MINIMAL takes an ask from ~11.5s to
~2.9s with no loss in routing accuracy.

Co-authored-by: Cursor <cursoragent@cursor.com>